2021-02-14  Alexander Miller  <alex.miller@gmx.de>

	* dwelf_elf_begin.c (dwelf_elf_begin): Move NEW_VERSION before
	definition.

2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* dwelf_strtab.c (dwelf_strtab_init): Remove cast of calloc return
	value.
	(morememory): Remove cast of malloc return value.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* libdwelf.h: Fix spelling typos in comments.
	* dwelf_strtab.c (newstring): Likewise.

	* dwelf_elf_e_machine_string.c (dwelf_elf_e_machine_string): Fix
	spelling typos in returned strings.

2020-06-04  Mark Wielaard  <mark@klomp.org>

	* dwelf_elf_e_machine_string.c (dwelf_elf_e_machine_string):
	Rename EM_ARC_COMPACT2 to EM_ARCV2.

2019-08-12  Mark Wielaard  <mark@klomp.org>

	* libdwelf.h (dwelf_elf_begin): Update documentation.
	* dwelf_elf_begin.c (dwelf_elf_begin): Don't suppress ELF_K_NONE.
	Mark old and new version.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libdwelf_a_SOURCES): Add dwelf_elf_e_machine_string.c.
	* libdwelf.h (dwelf_elf_e_machine_string): Define new function.
	* dwelf_elf_e_machine_string.c: New file.

2018-10-21  Mark Wielaard  <mark@klomp.org>

	* libdwelf.h (dwelf_elf_begin): Add function declaration.
	* dwelf_elf_begin.c: New file.
	* Makefile.am (libdwelf_a_SOURCES): Add dwelf_elf_begin.c.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* dwelf_elf_gnu_build_id.c (find_elf_build_id): Check p_align to
	set ELF type.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* dwelf_strtab.c: Remove sys/param.h include.
	(MIN): Remove definition.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libdwelf_a_SOURCES): Add dwelf_strtab.c.
	* dwelf_strtab.c: New file.
	* libdwelf.h (Dwelf_Strtab): New typedef.
	(Dwelf_Strent): Likewise.
	(dwelf_strtab_init): New function.
	(dwelf_strtab_add): Likewise.
	(dwelf_strtab_add_len): Likewise.
	(dwelf_strtab_finalize): Likewise.
	(dwelf_strent_off): Likewise.
	(dwelf_strent_str): Likewise.