@@ -1,3 +1,7 @@
+2022-03-24  Mark Wielaard  <mark@klomp.org>
+
+	* elf.h: Update from glibc.
+
 2022-03-22  Mark Wielaard  <mark@klomp.org>
 
 	* elf_getdata.c (__libelf_type_aligns): ELF_T_GNUHASH has different
